<resources>
    <string name="app_name">DBTestingSystem</string>
    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_input_score">请输入评分：</string>
    <string name="hint_students_answers">学生作答：</string>
    <string name="tap_to_login">登录</string>
    <string name="start_test">开始考试</string>
    <string name="show_result">查看成绩</string>
    <string name="welcome">欢迎进入数据库考试系统</string>
    <string name="mark_papers">批改考试</string>
    <string name="answer_here">你的答案</string>
    <string name="title_submit">确认提交</string>
    <string name="submit">提交</string>
    <string name="submit_paper">交卷</string>
    <string name="label_name">姓名：</string>
    <string name="label_sno">学号：</string>
    <string name="label_grade_sum">总分：</string>
    <string name="title_view_grade">查看成绩</string>
    <string name="label_paper_id">试卷编号：</string>
    <string name="hint_gotoPage">跳转到</string>
    <string name="label_time_last">剩余时间 :</string>
    <string name="error_login">用户名或者密码不正确</string>
    <string name="label_student">同学:</string>
    <string name="label_create_time">创建日期：</string>
    <string name="title_choose_paper">请选择一门考试</string>
    <string name="msg_saving">保存中,请稍后&#8230;</string>
    <string name="label_grade_choice">选择题：</string>
    <string name="label_grade_gap">填空题：</string>
    <string name="label_grade_essay">简答题</string>
    <string name="cancel_button">取消</string>
    <string name="ok_button">确认</string>
    <string name="submit_alert_msg">确认交卷吗？</string>
    <string name="title_quit">确认退出</string>
    <string name="msg_quit_test">如果退出，所有作答都不会被保存</string>
    <string name="toast_times_up">考试时间到</string>
    <string name="title_logout">确认登出</string>
    <string name="msg_logout">登出后你的需要重新登陆</string>
    <string name="paper_loading">正在准备试卷&#8230;</string>
    <string name="title_choose_num">请选择题号</string>
    <string name="title_view_unmarked_paper">选择学生考卷</string>
    <string name="label_give_score">评分</string>
    <string name="title_marking">批改考试</string>
    <string name="mark_indicator">正在批改%1$d题，共%2$d题</string>
    <string name="score_indicator">%1$d分</string>
    <string name="student_welcome">%1$s同学</string>
    <string name="teacher_welcome">%1$s老师</string>
    <string name="dean_welcome">%1$s教务员</string>
    <string name="msg_quit_mark">您的批改将不会被保存</string>
    <string name="msg_submit_mark">请确保您已经完成批改</string>
    <string name="order_by_sno">按学号排序</string>
    <string name="order_by_sname">按姓名排序</string>
    <string name="order_by_pid">按试卷编号排序</string>
    <string name="order_by_grade">按分数排序</string>
    <string name="account_management">人员管理</string>
    <string name="view_people_list">人员信息</string>
    <string name="label_max_grade">最高分</string>
    <string name="label_min_grade">最低分</string>
    <string name="label_average_grade">平均分</string>
    <string name="Label_statistics">统计信息</string>
    <string name="label_grade_zone">分数区间(分)</string>
    <string name="reset_button">重置</string>
    <string name="paper_management">试题管理</string>
    <string name="title_view_paper_abstract">试卷概览</string>
    <string name="hint_reference_answers">参考答案</string>
    <string name="question_with_score">%1$d. %2$s（%3$d分）</string>
    <string name="question_without_score">%1$d. %2$s</string>
    <string name="title_view_paper_detail">试卷详情</string>
    <string name="title_view_question_abstract">题库概览</string>
    <string name="label_choice">选择题（%1$d）</string>
    <string name="label_gap">填空题（%1$d）</string>
    <string name="label_essay">问答题（%1$d）</string>
    <string name="title_choice">选择题</string>
    <string name="title_gap">填空题</string>
    <string name="title_essay">问答题</string>

    <string name="hint_question_content">题目</string>
    <string name="hint_question_answer" >参考答案</string>
    <string name="title_add_question_content">添加题目</string>
    <string name="next_step">下一步 &#62;</string>
    <string name="previous_step">&#60; 上一步</string>
    <string name="desc_add_question">通过简单几步来添加一道新试题</string>
    <string name="title_add_question_answer">添加参考答案</string>
    <string name="finish">完成</string>
    <string name="title_add_choices">添加选项</string>
    <string name="label_choice_a">选项A:</string>
    <string name="label_choice_b">选项B:</string>
    <string name="label_choice_c">选项C:</string>
    <string name="label_choice_d">选项D:</string>
    <string name="title_add_paper_scheme">添加方案</string>
    <string name="desc_add_paper">通过简单几步来添加一份试卷</string>
    <string name="hint_question_count">题量</string>
    <string name="hint_score">分值</string>
    <string name="label_total_score">当前总分：</string>
    <string name="title_pick_choices">添加选择题（%1$d/%2$d）</string>
    <string name="title_pick_gaps">添加填空题（%1$d/%2$d）</string>
    <string name="title_pick_essays">添加问答题（%1$d/%2$d）</string>
    <string name="title_view_people_detail">查看详情</string>
    <string name="label_name_without_colon">姓名</string>
    <string name="label_sno_without_colon">学号</string>
    <string name="label_tno_without_colon">职工号</string>
    <string name="label_major">专业</string>
    <string name="title_add_new_account">新增人员</string>
    <string name="delete_failed_due_to_foreign_key_constraint">删除失败，请勿删除已被组卷的题目</string>
    <string name="label_sno_or_tno">学号/职工号</string>

    <string name="error_can_not_be_empty" >该项不能为空</string>
    <string name="add_account_successfully">新增成功</string>
    <string name="add_account_failed">添加失败，请检查数据是否合法</string>
    <string name="edit_account_successfully">修改成功</string>
    <string name="edit_account_failed">修改失败，请检查条目再重试</string>
    <string name="empty_string_no_unmarked">暂无待批改考卷</string>
    <string name="empty_string_no_data">暂无数据</string>
</resources>
