<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/add_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/title_add_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_add_question_content"
            android:textSize="32sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/desc_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_add_question"
            android:textSize="16sp"
            android:textStyle="italic" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_question_content"
            android:textColorHint="@color/RedColorPrimaryDark">

            <EditText
                android:id="@+id/question_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_answer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/title_add_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_add_question_answer"
            android:textSize="32sp"
            android:textStyle="italic" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_question_answer"
            android:textColorHint="@color/RedColorPrimaryDark">

            <EditText
                android:id="@+id/question_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/navigate_grey">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/action_button_left"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="?selectableItemBackground"
            android:enabled="false"
            android:onClick="onClick"
            android:text="@string/previous_step" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/action_button_right"
            style="?borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="?selectableItemBackground"
            android:enabled="false"
            android:onClick="onClick"
            android:text="@string/next_step" />
    </FrameLayout>
</RelativeLayout>