<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp"
    android:padding="8dp"
    android:foreground="?android:selectableItemBackground"
    app:cardBackgroundColor="@color/RedColorPrimary"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_sno"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/sno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="201330571059"
                android:textColor="?android:textColorPrimaryInverse" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/sname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="郑超达"
                android:textColor="?android:textColorPrimaryInverse" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_paper_id"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/PID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="?android:textColorPrimaryInverse" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_grade_sum"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_indicator"
                android:textColor="?android:textColorPrimaryInverse" />
        </TableRow>

    </TableLayout>

</android.support.v7.widget.CardView>