<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="48dp"
    android:padding="8dp"
    app:cardBackgroundColor="@color/RedcolorPrimary"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_paper_id"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/PID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="?android:textColorPrimaryInverse" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_grade_choice"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/grade_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30分"
                android:textColor="?android:textColorPrimaryInverse" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_grade_gap"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/grade_gap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="40分"
                android:textColor="?android:textColorPrimaryInverse" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_grade_essay"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/grade_essay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30分"
                android:textColor="?android:textColorPrimaryInverse" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_grade_sum"
                android:textColor="?android:textColorPrimaryInverse" />

            <TextView
                android:id="@+id/grade_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100分"
                android:textColor="?android:textColorPrimaryInverse" />
        </TableRow>

    </TableLayout>

</android.support.v7.widget.CardView>