<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="">
        <ImageButton
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/transparent"
            android:layout_gravity="end"
            android:onClick="onClick"
            android:src="@drawable/ic_tap_logout"
            android:contentDescription="@null" />
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_shadow"/>
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/name"
            android:textSize="25sp"
            android:text="郑超达老师："
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_below="@id/name"
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:minWidth="200dp"
            android:text="@string/welcome" />

        <LinearLayout
            android:id="@+id/button_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/mark_papers"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:onClick="onClick"
                android:text="@string/mark_papers" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/show_result"
                android:layout_width="150dp"
                android:onClick="onClick"
                android:layout_height="48dp"
                android:text="@string/show_result" />
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>