<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_box"
        android:src="@mipmap/banner"
        android:contentDescription="@null" />

    <android.support.v7.widget.CardView
        android:id="@+id/text_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        app:cardBackgroundColor="@color/lighter_background"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:hint="@string/hint_username"
                android:padding="10dp"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_background" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/login_button_card"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/text_box"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:foreground="?selectableItemBackground"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="@dimen/card_elevation"
        android:alpha="0.54"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="4dp"
        android:onClick="onClick"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/login_button_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/tap_to_login"
            android:textColor="?android:textColorPrimaryInverse"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>


</RelativeLayout>